--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                         <div class="col-xs-10 text-right menu-1">
                             <ul class="nav-menu">
                                 <li class="active"><a href="index.html">Home</a></li>
-                                <li><a href="about.html">Hello</a></li>
+                                <li><a href="#">Hello</a></li>
                                 <li class="has-dropdown">
-                                    <a href="services.html">Photo</a>
+                                    <a href="#">Photo</a>
                                     <!-- <ul class="dropdown">
                                         <li><a href="#">Web Design</a></li>
                                         <li><a href="#">eCommerce</a></li>
@@ -96,9 +96,9 @@
                                     </ul> -->
                                 </li>
                                 <li class="has-dropdown">
-                                    <a href="gallery.html">Films</a>
+                                    <a href="#">Films</a>
                                 </li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="#">Contact</a></li>
                             </ul>
                         </div>
                     </div>
