--- a/about.html
+++ b/about.html
@@ -77,23 +77,19 @@
             </script>
             <!--end of Navigation bar-->
 
-            <header
-                id="fh5co-header"
-                class="fh5co-cover fh5co-cover-sm"
-                role="banner"
-                style="background-image: url(images/img_bg_1.jpg)"
-            >
-                <div class="overlay"></div>
+            <!--Footer notif bar-->
+            <div id="footer-placeholder"></div>
+            <!--end of Footer notif bar-->
+
+            <header id="fh5co-header" class="fh5co-cover fh5co-cover-sm" role="banner">
+                <div class="overlay-light"></div>
                 <div class="fh5co-container">
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 text-center">
                             <div class="display-t">
                                 <div class="display-tc animate-box" data-animate-effect="fadeIn">
-                                    <h1>Couple Story</h1>
-                                    <h2>
-                                        Free HTML5 templates Made by
-                                        <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a>
-                                    </h2>
+                                    <h1>About Me</h1>
+                                    <h2>Who am I to you?</h2>
                                 </div>
                             </div>
                         </div>
@@ -254,67 +250,43 @@
                 </div>
             </div>
 
+            <!-- Page Footer -->
             <footer id="fh5co-footer" role="contentinfo">
                 <div class="container">
-                    <!-- <div class="row row-pb-md">
-				<div class="col-md-4 fh5co-widget">
-					<h3>The Company</h3>
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-					<p><a href="#">Learn More</a></p>
-				</div>
-				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
-					<ul class="fh5co-footer-links">
-						<li><a href="#">About</a></li>
-						<li><a href="#">Help</a></li>
-						<li><a href="#">Contact</a></li>
-						<li><a href="#">Terms</a></li>
-						<li><a href="#">Meetups</a></li>
-					</ul>
-				</div>
-
-				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
-					<ul class="fh5co-footer-links">
-						<li><a href="#">Shop</a></li>
-						<li><a href="#">Privacy</a></li>
-						<li><a href="#">Testimonials</a></li>
-						<li><a href="#">Handbook</a></li>
-						<li><a href="#">Held Desk</a></li>
-					</ul>
-				</div>
-
-				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
-					<ul class="fh5co-footer-links">
-						<li><a href="#">Find Designers</a></li>
-						<li><a href="#">Find Deelopers</a></li>
-						<li><a href="#">Teams</a></li>
-						<li><a href="#">Advertise</a></li>
-						<li><a href="#">API</a></li>
-					</ul>
-				</div>
-			</div> -->
-
                     <div class="row copyright">
                         <div class="col-md-12 text-center">
                             <p>
-                                <small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small>
-                                <small class="block"
-                                    >Designed by <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a> Demo
-                                    Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small
+                                Copyright &copy;
+                                <script>
+                                    document.write(new Date().getFullYear())
+                                </script>
+                                Forrest Herman
+                                <!-- <a href="https://github.com/forrest-herman" target="_blank">Forrest Herman</a> -->
+                                <br />
+                                <a
+                                    href="mailto:forrestherman.photography@gmail.com?subject='Forrest Herman — Wedding Photographer + Filmmaker Inquiry'"
                                 >
+                                    forrestherman.photography@gmail.com
+                                </a>
+                                <br />
+                                (705) 203-2534
                             </p>
                             <div>
                                 <ul class="fh5co-social-icons">
                                     <li>
-                                        <a href="#"><i class="icon-twitter"></i></a>
+                                        <a href="https://www.instagram.com/forrestherman/"
+                                            ><i class="icon-instagram"></i
+                                        ></a>
                                     </li>
                                     <li>
-                                        <a href="#"><i class="icon-facebook"></i></a>
+                                        <a href="https://www.facebook.com/forrestherman.photography"
+                                            ><i class="icon-facebook"></i
+                                        ></a>
                                     </li>
                                     <li>
-                                        <a href="#"><i class="icon-linkedin"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="icon-dribbble"></i></a>
+                                        <a href="https://www.pinterest.ca/forresthermanphotography/"
+                                            ><i class="icon-pinterest"></i
+                                        ></a>
                                     </li>
                                 </ul>
                             </div>
@@ -322,11 +294,18 @@
                     </div>
                 </div>
             </footer>
+            <!--end of Page Footer -->
         </div>
 
         <div class="gototop js-top">
             <a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
         </div>
+
+        <script>
+            $(function () {
+                $("#footer-placeholder").load("footerStickyNotif.html")
+            })
+        </script>
 
         <!-- jQuery -->
         <script src="js/jquery.min.js"></script>
