--- a/nav.html
+++ b/nav.html
@@ -1,19 +1,19 @@
-<nav class="fh5co-nav" role="navigation">
+<nav id="navbar" class="fh5co-nav nav-dark" role="navigation">
     <div class="container">
         <div id="nav" class="row nav">
             <div class="col-xs-2 col-nav">
                 <div id="fh5co-logo">
                     <a href="index.html">
-                        <img id="logo" src="img/forrest-herman-white.png" alt="logo" />
+                        <img id="logo" src="img/forrest-herman-black.png" alt="logo" />
                     </a>
                 </div>
             </div>
             <div class="col-xs-10 text-right menu-1">
-                <ul class="nav-menu">
-                    <li class="active"><a href="index.html">Home</a></li>
+                <ul id="nav-menu" class="nav-menu">
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">Hello</a></li>
-                    <li class="has-dropdown">
-                        <a href="services.html">Photo</a>
+                    <li>
+                        <a href="photos.html">Photos</a>
                         <!-- <ul class="dropdown">
                             <li><a href="#">Web Design</a></li>
                             <li><a href="#">eCommerce</a></li>
@@ -21,8 +21,8 @@
                             <li><a href="#">API</a></li>
                         </ul> -->
                     </li>
-                    <li class="has-dropdown">
-                        <a href="gallery.html">Films</a>
+                    <li>
+                        <a href="films.html">Films</a>
                     </li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -30,3 +30,10 @@
         </div>
     </div>
 </nav>
+
+<!-- Main -->
+<script src="js/main.js"></script>
+<!-- jQuery -->
+<script src="js/jquery.min.js"></script>
+<!-- jQuery Easing -->
+<script src="js/jquery.easing.1.3.js"></script>
