--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
                             <div class="display-t">
                                 <div class="display-tc animate-box" data-animate-effect="fadeIn">
                                     <h1>About Me</h1>
-                                    <h2>Who am I to you?</h2>
+                                    <h2>Let's be friends!</h2>
                                 </div>
                             </div>
                         </div>
@@ -97,7 +97,7 @@
                 </div>
             </header>
 
-            <div id="fh5co-couple" class="fh5co-section-gray">
+            <!-- <div id="fh5co-couple" class="fh5co-section-gray">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
@@ -248,7 +248,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Page Footer -->
             <footer id="fh5co-footer" role="contentinfo">
@@ -264,7 +264,7 @@
                                 <!-- <a href="https://github.com/forrest-herman" target="_blank">Forrest Herman</a> -->
                                 <br />
                                 <a
-                                    href="mailto:forrestherman.photography@gmail.com?subject='Forrest Herman — Wedding Photographer + Filmmaker Inquiry'"
+                                    href="mailto:forrestherman.photography@gmail.com?subject=Forrest Herman — Wedding Inquiry"
                                 >
                                     forrestherman.photography@gmail.com
                                 </a>
@@ -274,17 +274,17 @@
                             <div>
                                 <ul class="fh5co-social-icons">
                                     <li>
-                                        <a href="https://www.instagram.com/forrestherman/"
+                                        <a href="https://www.instagram.com/forrestherman/" target="_blank"
                                             ><i class="icon-instagram"></i
                                         ></a>
                                     </li>
                                     <li>
-                                        <a href="https://www.facebook.com/forrestherman.photography"
+                                        <a href="https://www.facebook.com/forrestherman.photography" target="_blank"
                                             ><i class="icon-facebook"></i
                                         ></a>
                                     </li>
                                     <li>
-                                        <a href="https://www.pinterest.ca/forresthermanphotography/"
+                                        <a href="https://www.pinterest.ca/forresthermanphotography/" target="_blank"
                                             ><i class="icon-pinterest"></i
                                         ></a>
                                     </li>
