--- a/films.html
+++ b/films.html
@@ -48,6 +48,7 @@
             type="text/css"
         />
         <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet" />
 
         <!-- Font Awesome -->
         <script src="https://use.fontawesome.com/bfdc9bea0d.js"></script>
@@ -115,7 +116,28 @@
             <div class="container nav-spacer">
                 <!-- <h3>For details on wedding films, please see here.</h3> -->
             </div>
-            <!-- Here goes -->
+
+            <div class="container">
+                <div class="col-md-12 animate-box">
+                    <div
+                        class="fh5co-video fh5co-bg"
+                        style="background-image: url('/img/KevinandKatyThumbnailVimeo.jpg')"
+                    >
+                        <div class="video-text-container">
+                            <h3>Katy + Kevin</h3>
+                            <h4>September 2020</h4>
+                        </div>
+                        <a
+                            href="https://vimeo.com/video/462731341?wmode=opaque&portrait=0&byline=0&title=0"
+                            class="popup-vimeo"
+                        >
+                            <i class="icon-play video-text"></i
+                        ></a>
+                        <div class="overlay"></div>
+                    </div>
+                </div>
+            </div>
+            <!-- <br />
             <div class="video-responsive">
                 <iframe
                     src="https://player.vimeo.com/video/462731341?wmode=opaque&portrait=0&byline=0&title=0"
@@ -126,16 +148,15 @@
                     allowfullscreen
                     sidedock="0"
                 ></iframe>
-                <!-- <div class="overlay-light"></div> -->
                 <div class="video-text-container display-flex align-items-center video-player">
                     <h3>Katy + Kevin</h3>
                     <h4>September 2020</h4>
                     <span class="video-text"
-                        ><i class="icon-play"></i>
+                        ><i class="fas fa-play"></i>
                         Play Film
                     </span>
                 </div>
-            </div>
+            </div> -->
 
             <div class="container">
                 <div class="row">
