--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet" />
         <link rel="preconnect" href="https://fonts.gstatic.com" />
         <link href="https://fonts.googleapis.com/css2?family=Fanwood+Text:ital@0;1&display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet" />
 
         <!-- Animate.css -->
         <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css"/> -->
@@ -77,6 +78,7 @@
 
         <div id="page">
             <nav id="navbar" class="fh5co-nav nav-light" role="navigation">
+                <!-- <div class="overlay-prep" style="background: rgba(0, 0, 0, 0.4)"></div> -->
                 <div class="container">
                     <div id="nav" class="row nav">
                         <div class="col-xs-2 col-nav">
@@ -117,7 +119,7 @@
                 data-stellar-background-ratio="0.5"
             >
                 <!-- style="background-image: url(img/Couple_Engage_ErinMike_b&w_002.jpg)" -->
-                <div class="overlay-light"></div>
+                <div class="overlay-prep overlay-light"></div>
                 <!-- <div class="container">
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 text-center">
@@ -134,10 +136,13 @@
                 </div> -->
             </header>
 
-            <div id="fh5co-couple">
+            <div id="fh5co-couple" class="fh5co-section-gray">
                 <div class="container">
-                    <div class="row">
-                        <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
+                    <div class="row flex-row">
+                        <div class="col-sm-4 col-sm-offset-1 order-sm-2 text-center animate-box img-container">
+                            <img class="about-img" src="img/DundurnCastle_010.jpg" alt="" />
+                        </div>
+                        <div class="col-sm-5 order-sm-1 text-center animate-box flex-col justify-center">
                             <h2>Hello!</h2>
                             <h3>Welcome to my home, I'm so excited to meet you.</h3>
                             <p>
@@ -145,6 +150,7 @@
                                 your memories. Learn more about me here.
                             </p>
                         </div>
+                        <div class="col-sm-1"></div>
                     </div>
                     <!-- <div class="couple-wrap animate-box">
                         <div class="couple-half">
@@ -176,8 +182,7 @@
                 </div>
             </div>
 
-            <div id="fh5co-event" class="fh5co-bg" style="background-image: url(img/Couple_ErinMike_Banner_001.jpg)">
-                <!-- <div class="overlay"></div> -->
+            <!-- <div id="fh5co-event" class="fh5co-bg" style="background-image: url(img/Couple_ErinMike_Banner_001.jpg)">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
@@ -236,82 +241,9 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
-            <div id="fh5co-couple-story">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-                            <span>I will work around your schedule</span>
-                            <h2>Timeline</h2>
-                            <p>Text</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12 col-md-offset-0">
-                            <ul class="timeline animate-box">
-                                <li class="animate-box">
-                                    <div
-                                        class="timeline-badge"
-                                        style="background-image: url(images/couple-1.jpg)"
-                                    ></div>
-                                    <div class="timeline-panel">
-                                        <div class="timeline-heading">
-                                            <h3 class="timeline-title">First We Meet</h3>
-                                            <span class="date"
-                                                >Virtual Chat or In-Person meet up! Let's grab coffee :)</span
-                                            >
-                                        </div>
-                                        <div class="timeline-body">
-                                            <p>
-                                                I want to get to know you. I belive it's so important to get to know the
-                                                couple ahead of time...
-                                            </p>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="timeline-inverted animate-box">
-                                    <div
-                                        class="timeline-badge"
-                                        style="background-image: url(images/couple-2.jpg)"
-                                    ></div>
-                                    <div class="timeline-panel">
-                                        <div class="timeline-heading">
-                                            <h3 class="timeline-title">Engagement Session</h3>
-                                            <span class="date">Build a connection</span>
-                                        </div>
-                                        <div class="timeline-body">
-                                            <p>
-                                                Engagement sessions are offered at no additional cost. These allow us to
-                                                build a relationship before your special day. Your wedding should only
-                                                have friends and family, so this is my chance to become friends with you
-                                                guys!
-                                            </p>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="animate-box">
-                                    <div
-                                        class="timeline-badge"
-                                        style="background-image: url(images/couple-3.jpg)"
-                                    ></div>
-                                    <div class="timeline-panel">
-                                        <div class="timeline-heading">
-                                            <h3 class="timeline-title">Your Special Day</h3>
-                                            <span class="date">I'm commited to capturing visuals all day long</span>
-                                        </div>
-                                        <div class="timeline-body">
-                                            <p>Send me your schedule...</p>
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div id="fh5co-counter" class="fh5co-bg fh5co-counter" style="background-image: url(images/img_bg_5.jpg)">
+            <!-- <div id="fh5co-counter" class="fh5co-bg fh5co-counter" style="background-image: url(images/img_bg_5.jpg)">
                 <div class="overlay"></div>
                 <div class="container">
                     <div class="row">
@@ -388,7 +320,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <div id="fh5co-testimonial">
                 <div class="container">
@@ -406,7 +338,11 @@
                                         <div class="item">
                                             <div class="testimony-slide active text-center">
                                                 <figure>
-                                                    <img src="images/couple-1.jpg" alt="user" />
+                                                    <img
+                                                        class="testimonial-img"
+                                                        src="img/Katy&KevinIcon.jpg"
+                                                        alt="user"
+                                                    />
                                                 </figure>
                                                 <span>Katy & Kevin</span>
                                                 <blockquote>
@@ -450,7 +386,7 @@
                 <div class="container">
                     <div class="row animate-box">
                         <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-                            <h2>The Goods</h2>
+                            <h2>Offerings</h2>
                             <p>Wedding Packages, etc.</p>
                         </div>
                     </div>
@@ -509,6 +445,79 @@
                 </div>
             </div>
 
+            <div id="fh5co-couple-story">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
+                            <span>The Wedding Experience</span>
+                            <h2>Timeline</h2>
+                            <!-- <p>Text</p> -->
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12 col-md-offset-0">
+                            <ul class="timeline animate-box">
+                                <li class="animate-box">
+                                    <div
+                                        class="timeline-badge"
+                                        style="background-image: url(images/couple-1.jpg)"
+                                    ></div>
+                                    <div class="timeline-panel">
+                                        <div class="timeline-heading">
+                                            <h3 class="timeline-title">First We Meet</h3>
+                                            <span class="date"
+                                                >Virtual Chat or In-Person meet up! Let's grab coffee :)</span
+                                            >
+                                        </div>
+                                        <div class="timeline-body">
+                                            <p>
+                                                I want to get to know you. I belive it's so important to get to know the
+                                                couple ahead of time...
+                                            </p>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="timeline-inverted animate-box">
+                                    <div
+                                        class="timeline-badge"
+                                        style="background-image: url(images/couple-2.jpg)"
+                                    ></div>
+                                    <div class="timeline-panel">
+                                        <div class="timeline-heading">
+                                            <h3 class="timeline-title">Engagement Session</h3>
+                                            <span class="date">Build a connection</span>
+                                        </div>
+                                        <div class="timeline-body">
+                                            <p>
+                                                Engagement sessions are offered at no additional cost. These allow us to
+                                                build a relationship before your special day. Your wedding should only
+                                                have friends and family, so this is my chance to become friends with you
+                                                guys!
+                                            </p>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="animate-box">
+                                    <div
+                                        class="timeline-badge"
+                                        style="background-image: url(images/couple-3.jpg)"
+                                    ></div>
+                                    <div class="timeline-panel">
+                                        <div class="timeline-heading">
+                                            <h3 class="timeline-title">Your Special Day</h3>
+                                            <span class="date">I'm commited to capturing visuals all day long</span>
+                                        </div>
+                                        <div class="timeline-body">
+                                            <p>Send me your schedule...</p>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <div id="fh5co-started" class="fh5co-bg" style="background-image: url(images/img_bg_4.jpg)">
                 <div class="overlay"></div>
                 <div class="container">
@@ -556,7 +565,7 @@
                                 <!-- <a href="https://github.com/forrest-herman" target="_blank">Forrest Herman</a> -->
                                 <br />
                                 <a
-                                    href="mailto:forrestherman.photography@gmail.com?subject='Forrest Herman — Wedding Photographer + Filmmaker Inquiry'"
+                                    href="mailto:forrestherman.photography@gmail.com?subject=Forrest Herman — Wedding Inquiry"
                                 >
                                     forrestherman.photography@gmail.com
                                 </a>
@@ -566,17 +575,17 @@
                             <div>
                                 <ul class="fh5co-social-icons">
                                     <li>
-                                        <a href="https://www.instagram.com/forrestherman/"
+                                        <a href="https://www.instagram.com/forrestherman/" target="_blank"
                                             ><i class="icon-instagram"></i
                                         ></a>
                                     </li>
                                     <li>
-                                        <a href="https://www.facebook.com/forrestherman.photography"
+                                        <a href="https://www.facebook.com/forrestherman.photography" target="_blank"
                                             ><i class="icon-facebook"></i
                                         ></a>
                                     </li>
                                     <li>
-                                        <a href="https://www.pinterest.ca/forresthermanphotography/"
+                                        <a href="https://www.pinterest.ca/forresthermanphotography/" target="_blank"
                                             ><i class="icon-pinterest"></i
                                         ></a>
                                     </li>
