--- a/contact.html
+++ b/contact.html
@@ -48,6 +48,7 @@
             type="text/css"
         />
         <link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet" />
 
         <!-- Animate.css -->
         <link rel="stylesheet" href="css/animate.css" />
